# nbtscan

./: CMakeLists.txt  README  byteswap_nodestats.c  display_nbtstat.c  dump_packet.c  errors.c  gen_perl.c  hostname.c  libcommon.h  nbtscan.c  netbios_fixname.c  netbios_name.c  packetio.c  parse_nbtstat.c  parse_target_cb.c  process_response.c  targets.c  version.c
.github/workflows/: linux.yml  test.yml
